--- a/examples/notebooks/documentation/transforms/python/elementwise/run_inference.ipynb
+++ b/examples/notebooks/documentation/transforms/python/elementwise/run_inference.ipynb
@@ -54,7 +54,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%pip install apache_beam>=2.40.0"
+        "%pip install apache_beam>=2.40.0 torch --quiet"
       ],
       "metadata": {
         "id": "loxD-rOVchRn"
@@ -66,52 +66,30 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "7f841596-f217-46d2-b64e-1952db4de4cb",
-      "metadata": {
-        "id": "7f841596-f217-46d2-b64e-1952db4de4cb"
-      },
-      "outputs": [],
-      "source": [
-        "%pip install torch"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "9a92e3a7-beb6-46ae-a5b0-53c15487de38",
       "metadata": {
         "id": "9a92e3a7-beb6-46ae-a5b0-53c15487de38"
       },
       "outputs": [],
       "source": [
-        "import argparse\n",
         "import csv\n",
-        "import json\n",
         "import os\n",
+        "import pickle\n",
         "import torch\n",
         "from typing import Tuple\n",
         "\n",
         "import apache_beam as beam\n",
         "import numpy\n",
+        "import numpy as np\n",
         "from apache_beam.ml.inference.base import KeyedModelHandler\n",
         "from apache_beam.ml.inference.base import PredictionResult\n",
         "from apache_beam.ml.inference.base import RunInference\n",
         "from apache_beam.ml.inference.pytorch_inference import PytorchModelHandlerTensor\n",
         "from apache_beam.ml.inference.pytorch_inference import PytorchModelHandlerKeyedTensor\n",
-        "from apache_beam.options.pipeline_options import PipelineOptions"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "248458a6-cfd8-474d-ad0e-f37f7ae981ae",
-      "metadata": {
-        "id": "248458a6-cfd8-474d-ad0e-f37f7ae981ae"
-      },
-      "outputs": [],
-      "source": [
-        "save_model_dir_multiply_five = 'five_times_table_torch.pt'\n",
-        "save_model_dir_multiply_ten = 'ten_times_table_torch.pt'"
+        "from apache_beam.ml.inference.sklearn_inference import ModelFileType\n",
+        "from apache_beam.ml.inference.sklearn_inference import SklearnModelHandlerNumpy\n",
+        "from apache_beam.options.pipeline_options import PipelineOptions\n",
+        "from sklearn import linear_model"
       ]
     },
     {
@@ -126,47 +104,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "id": "202e5a3e-4ccd-4ae3-9852-e47de0721839",
-      "metadata": {
-        "id": "202e5a3e-4ccd-4ae3-9852-e47de0721839"
-      },
-      "source": [
-        "### Linear regression model in Pytorch."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "68bf8bf0-f735-45ee-8ebb-a2d8bb8a6bc7",
-      "metadata": {
-        "id": "68bf8bf0-f735-45ee-8ebb-a2d8bb8a6bc7"
-      },
-      "outputs": [],
-      "source": [
-        "class LinearRegression(torch.nn.Module):\n",
-        "    def __init__(self, input_dim=1, output_dim=1):\n",
-        "        super().__init__()\n",
-        "        self.linear = torch.nn.Linear(input_dim, output_dim)  \n",
-        "    def forward(self, x):\n",
-        "        out = self.linear(x)\n",
-        "        return out"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "1918435c-0029-4eb6-8eee-bda5470eb2ff",
-      "metadata": {
-        "id": "1918435c-0029-4eb6-8eee-bda5470eb2ff"
-      },
-      "source": [
-        "### Prepare train and test data to train a 5 times model.\n",
-        "* `x` contains values in the range from 0 to 99.\n",
-        "* `y` is a list of 5 * `x`. \n",
-        "* `value_to_predict` includes values outside of the training data."
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "id": "9302917f-6200-4af4-a410-4bd6f2a070b8",
@@ -175,36 +112,26 @@
       },
       "outputs": [],
       "source": [
+        "save_model_dir_multiply_five = 'five_times_table_torch.pt'\n",
+        "\n",
+        "# Linear regression model in Pytorch.\n",
+        "class LinearRegression(torch.nn.Module):\n",
+        "    def __init__(self, input_dim=1, output_dim=1):\n",
+        "        super().__init__()\n",
+        "        self.linear = torch.nn.Linear(input_dim, output_dim)  \n",
+        "    def forward(self, x):\n",
+        "        out = self.linear(x)\n",
+        "        return out\n",
+        "\n",
+        "# train data for 5 times model\n",
         "x = numpy.arange(0, 100, dtype=numpy.float32).reshape(-1, 1)\n",
-        "y = (x * 5).reshape(-1, 1)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "9dc22aec-08c3-43ab-a5ce-451cb63c485a",
-      "metadata": {
-        "id": "9dc22aec-08c3-43ab-a5ce-451cb63c485a"
-      },
-      "source": [
-        "### Train the linear regression mode on 5 times data."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "0a8b7924-ff06-4584-8f41-079268387a67",
-      "metadata": {
-        "id": "0a8b7924-ff06-4584-8f41-079268387a67"
-      },
-      "outputs": [],
-      "source": [
+        "y = (x * 5).reshape(-1, 1)\n",
+        "\n",
         "five_times_model = LinearRegression()\n",
         "optimizer = torch.optim.Adam(five_times_model.parameters())\n",
         "loss_fn = torch.nn.L1Loss()\n",
         "\n",
-        "\"\"\"\n",
-        "Train the five_times_model\n",
-        "\"\"\"\n",
+        "# Train the linear regression mode on 5 times data.\n",
         "epochs = 10000\n",
         "tensor_x = torch.from_numpy(x)\n",
         "tensor_y = torch.from_numpy(y)\n",
@@ -213,28 +140,8 @@
         "    loss = loss_fn(y_pred, tensor_y)\n",
         "    five_times_model.zero_grad()\n",
         "    loss.backward()\n",
-        "    optimizer.step()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "bd106b29-6187-42c1-9743-1666c147b5e3",
-      "metadata": {
-        "id": "bd106b29-6187-42c1-9743-1666c147b5e3"
-      },
-      "source": [
-        "Save the model using `torch.save()` and verify if the saved model file exists."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "882bbada-4f6d-4370-a047-c5961e564ee8",
-      "metadata": {
-        "id": "882bbada-4f6d-4370-a047-c5961e564ee8"
-      },
-      "outputs": [],
-      "source": [
+        "    optimizer.step()\n",
+        "\n",
         "torch.save(five_times_model.state_dict(), save_model_dir_multiply_five)\n",
         "print(os.path.exists(save_model_dir_multiply_five)) # verify if the model is saved"
       ]
@@ -352,23 +259,6 @@
       "id": "CYOEnKzVi7P1",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "d6142b75-eef1-4e52-9fa4-fe02fe916b26",
-      "metadata": {
-        "id": "d6142b75-eef1-4e52-9fa4-fe02fe916b26"
-      },
-      "outputs": [],
-      "source": [
-        "import pickle\n",
-        "from sklearn import linear_model\n",
-        "\n",
-        "import numpy as np\n",
-        "from apache_beam.ml.inference.sklearn_inference import ModelFileType\n",
-        "from apache_beam.ml.inference.sklearn_inference import SklearnModelHandlerNumpy"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -490,9 +380,7 @@
     "colab": {
       "name": "RunInference_basic.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "202e5a3e-4ccd-4ae3-9852-e47de0721839"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
